--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ on: [push]
 
 jobs:
         deploy:
-                name: Deplay Homepage
+                name: Deploy Homepage
                 runs-on: [self-hosted, linux]
                 steps:
                 - name: Checkout
