--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,4 +15,4 @@ jobs:
           with:
             repository: 'hardillb/homepage'
             path: 'homepage'
-        - run: bash ./homepage/scripts/deploy.sh
+        - run: bash ./homepage/.scripts/deploy.sh
